force-app/main/default/objects/CampaignMember/fields/Badge_Company__c.field-meta.xml
<CustomField>
    <fullName>Badge_Company__c</fullName>
    <formula>Contact.Badge_Company__c</formula>
    <label>Badge Company</label>
    <type>Text</type>
</CustomField>