force-app/main/default/objects/CampaignMember/fields/Badge_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Badge_Last_Name__c</fullName>
    <formula>Contact.Badge_Last_Name__c</formula>
    <label>Badge Last Name</label>
    <type>Text</type>
</CustomField>