force-app/main/default/objects/CampaignMember/fields/Campaign_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Id__c</fullName>
    <formula>HYPERLINK( &quot;/&quot;+ Id , &quot;Campaign Member Record&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Member Id</label>
    <type>Text</type>
</CustomField>