force-app/main/default/objects/CampaignMember/fields/Campaign_Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Message_Type__c</fullName>
    <formula>TEXT(Campaign.Message_Type__c)</formula>
    <label>Campaign Message Type</label>
    <type>Text</type>
</CustomField>