force-app/main/default/objects/CampaignMember/fields/CPE__c.field-meta.xml
<CustomField>
    <fullName>CPE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CPE</label>
    <type>Checkbox</type>
</CustomField>