force-app/main/default/objects/CampaignMember/fields/PEHF__c.field-meta.xml
<CustomField>
    <fullName>PEHF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PEHF</label>
    <type>Checkbox</type>
</CustomField>