force-app/main/default/objects/CampaignMember/fields/Recent_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Recent_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recent Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Members Roll Up</relationshipLabel>
    <relationshipName>Campaign_Members_Roll</relationshipName>
    <type>Lookup</type>
</CustomField>