force-app/main/default/objects/CampaignMember/fields/Recent_Msg_Type__c.field-meta.xml
<CustomField>
    <fullName>Recent_Msg_Type__c</fullName>
    <formula>TEXT( Recent_Campaign__r.Message_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recent Msg Type</label>
    <type>Text</type>
</CustomField>