force-app/main/default/objects/CampaignMember/fields/Requested_By_10__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By 10</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaign Members (Requested By 10)</relationshipLabel>
    <relationshipName>Campaign_Members9</relationshipName>
    <type>Lookup</type>
</CustomField>