force-app/main/default/objects/CampaignMember/fields/Requested_By_11__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_11__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By 11</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaign Members (Requested By 11)</relationshipLabel>
    <relationshipName>Campaign_MembersV4KA</relationshipName>
    <type>Lookup</type>
</CustomField>