force-app/main/default/objects/CampaignMember/fields/Requested_By_1__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By 1</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a Houlihan Lokey employee contact.</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Houlihan Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>