force-app/main/default/objects/CampaignMember/fields/Requested_By_LOB_10__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_LOB_10__c</fullName>
    <formula>TEXT( Requested_By_10__r.Line_of_Business__c )</formula>
    <label>Requested By LOB 10</label>
    <type>Text</type>
</CustomField>