force-app/main/default/objects/CampaignMember/fields/Requested_By_LOB_1__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_LOB_1__c</fullName>
    <description>Display requested by contact&apos;s LOB</description>
    <formula>TEXT( Requested_By_1__r.Line_of_Business__c )</formula>
    <label>Requested By LOB 1</label>
    <type>Text</type>
</CustomField>