force-app/main/default/objects/CampaignMember/fields/Requested_By_LOB_2__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_LOB_2__c</fullName>
    <description>Display requested by contact&apos;s LOB</description>
    <formula>TEXT( Requested_By_2__r.Line_of_Business__c )</formula>
    <label>Requested By LOB 2</label>
    <type>Text</type>
</CustomField>