force-app/main/default/objects/CampaignMember/fields/Response_Comments__c.field-meta.xml
<CustomField>
    <fullName>Response_Comments__c</fullName>
    <label>Response Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>