force-app/main/default/objects/CampaignMember/fields/Response_Method__c.field-meta.xml
<CustomField>
    <fullName>Response_Method__c</fullName>
    <label>Response Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E-Mail</fullName>
            </value>
            <value>
                <fullName>Walk-In</fullName>
            </value>
            <value>
                <fullName>Online Registration</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>