force-app/main/default/objects/CampaignMember/fields/Speaker_Panelist__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Panelist__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this person speaking or participating in a panel discussion at this event?</inlineHelpText>
    <label>Speaker/Panelist</label>
    <type>Checkbox</type>
</CustomField>